Fix PC layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ h3 {
 #tip {
   text-align: center;
   font-family: 'Indie Flower', cursive;
-  padding-right: 5em;
+  padding-right: 3em;
   margin-right: 4em;
   color: white;
 }
